--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "silverstripe-module",
     "require": {
         "guzzlehttp/guzzle": "~6.0",
-        "silverstripe/userforms": "^4.5"
+        "silverstripe/userforms": "4.3.1@stable"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0"
