Split API call in to generic method for re-use

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -10,3 +10,6 @@ UserDefinedForm_Controller:
 UserDefinedForm:
   extensions:
     - UserDefinedFormFreshdeskExtension
+Injector:
+  FreshdeskClient:
+    factory: 'ClientFactory'
