Initial SSO work by John

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -13,3 +13,6 @@ UserDefinedForm:
 Injector:
   FreshdeskClient:
     factory: 'ClientFactory'
+Director:
+  rules:
+    'freshdesksso': FreshdeskSSO
