Ability to move form fields out of description, into (custom) fields

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -4,6 +4,9 @@ After:
   - 'framework/*'
   - 'cms/*'
 ---
+EditableFormField:
+  extensions:
+    - EditableFormFieldFreshdeskExtension
 UserDefinedForm_Controller:
   extensions:
     - UserDefinedForm_ControllerFreshdeskExtension
