Initial SSO work by John (#1)
* Initial SSO work by John

* Updated FreshdeskPage

* Ability to filter list of Freshdesk tickets

* Fix client dependency

* Use APICall to get tickets to display

* Change order of APICall params

* General code clean

* Freshdesk -> FreshdeskAPI

* Paginate tikets

* Convert status and priority to human readable values

* Document humanReadable()

* Clean up SSO class

* move API code to it's own folder

* Remove FreshdeskDomain in favor of FRESHDESK_API_BASEURL

* Better logging for set-up of Freshdesk userform ticket

* Initial ticket filtering work

* Allow overriding of status & priority via yml

* Filter form

* Rename ClientFactory

* Move form template to module

* Check for member username on role check

* Document @config

* Readme updates

* Clean up of SSO class

* Change 'submit' to 'filter'

* Ensure user is logged in for ticket generation

* Remove hard coded URLs and introduce logout method

* Redirect on bad SS env vars

* Handle for case where the user doesn't exist in FD

* Ability to move form fields out of description, into (custom) fields

* Class -> class

* Remove elses

* Add validation when specifying Freshdesk fields

* Tidy up misunderstanding

* Missed misunderstanding

* Remove unused var

* Cleanup

* Populate statuses via API, add Agent details

* Unassigned agent now empty

* If... else, else!

* Update readme

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -4,6 +4,9 @@ After:
   - 'framework/*'
   - 'cms/*'
 ---
+EditableFormField:
+  extensions:
+    - EditableFormFieldFreshdeskExtension
 UserDefinedForm_Controller:
   extensions:
     - UserDefinedForm_ControllerFreshdeskExtension
@@ -12,4 +15,7 @@ UserDefinedForm:
     - UserDefinedFormFreshdeskExtension
 Injector:
   FreshdeskClient:
-    factory: 'ClientFactory'
+    factory: 'FreshdeskClientFactory'
+Director:
+  rules:
+    'freshdesksso': FreshdeskSSO
