--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,8 @@
     "type": "silverstripe-module",
     "require": {
         "guzzlehttp/guzzle": "~6.0",
-        "silverstripe/userforms": "4.3.1@stable"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.0"
+        "silverstripe/userforms": "4.3.1@stable",
+        "silverstripe/framework": "~3.6",
+        "silverstripe/cms": "~3.6"
     }
 }
