actually use proper name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "silverstripeltd/silverstripe-freshdesk",
+    "name": "silverstripe/freshdesk",
     "description": "Additional feature for userdefined forms to raise freshdesk tickets",
     "type": "silverstripe-module",
     "require": {
