Cleanup freshdesk module.
* Rewrite API to service, use external api library. Remove static caches
  on API layer, move the only sensible cache into FreshdeskPage. Rename
  FreshdeskAPI to FreshdeskService

* Use common paging method for getting all agents and contacts
* Rename env variables
* Cleanup code to meet modern naming and formatting standards
* Fix test to use mock, setup circleci for CI.

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -15,4 +15,4 @@ UserDefinedForm:
     - UserDefinedFormFreshdeskExtension
 Director:
   rules:
-    'freshdesksso': FreshdeskSSO
+    'freshdesksso': FreshdeskSsoController
