--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,14 @@
     "description": "Additional feature for userdefined forms to raise freshdesk tickets",
     "type": "silverstripe-module",
     "require": {
+        "mpclarkson/freshdesk-php-sdk": "dev-master",
         "guzzlehttp/guzzle": "~6.0",
         "silverstripe/userforms": "^4.3.1",
         "silverstripe/framework": "~3.6",
         "silverstripe/cms": "~3.6"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4",
+        "friendsofphp/php-cs-fixer": "~2.2.0@stable"
     }
 }
