Add auth logging for SSO actions

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -16,3 +16,6 @@ UserDefinedForm:
 Director:
   rules:
     'freshdesksso': FreshdeskSsoController
+Injector:
+  FreshdeskAuditLogger:
+    factory: 'SilverStripe\Freshdesk\LogFactory'
