--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "silverstripe-module",
     "require": {
         "mpclarkson/freshdesk-php-sdk": "dev-master",
+        "monolog/monolog": "^1.2",
         "guzzlehttp/guzzle": "~6.0",
         "silverstripe/userforms": "^4.3.1",
         "silverstripe/framework": "~3.6",
